# robots

./: AppWindow.cpp  AppWindow.hpp  CMakeLists.txt  DynamicResource.cpp  DynamicResource.hpp  anim.cpp  anim.hpp  block.cpp  block.hpp  bot.cpp  bot.hpp  direction.cpp  direction.hpp  explore.cpp  explore.hpp  graphics.c  graphics.h  innerWorld.cpp  innerWorld.hpp  loc.cpp  loc.hpp  main.cpp  navigate.cpp  navigate.hpp  path.cpp  path.hpp  perlin.c  perlin.h  resourceGraph.cpp  resourceGraph.hpp  resources.txt  timer.cpp  timer.hpp  util.cpp  util.hpp  world.cpp  world.hpp
anims/: blue.ppm  grey.ppm
